# cosmic-ext-control-center

./: Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: release.yml
examples/: echo-demo.ron  fan.ron
resources/: com.pyxyll.CosmicControlCenter.desktop  com.pyxyll.CosmicControlCenter.metainfo.xml  com.pyxyll.CosmicControlCenterApplet.desktop  com.pyxyll.CosmicExtControlCenter.desktop  com.pyxyll.CosmicExtControlCenter.metainfo.xml  com.pyxyll.CosmicExtControlCenterApplet.desktop
src/: app.rs  applet.rs  config.rs  lib.rs  main.rs  notifications.rs  plugins.rs  status.rs  theme.rs  trigger.rs
src/module/: manifest.rs  mod.rs
src/module/builtin/: airplane.rs  appearance.rs  bluetooth.rs  divider.rs  dnd.rs  media.rs  microphone.rs  mod.rs  mpris.rs  notifications.rs  power_profile.rs  sysmon.rs  volume.rs  vpn.rs  wifi.rs
src/widgets/: aurora.rs  gauge.rs  mod.rs
